[package]
name = "lawyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }
clap = { version = "4.4.6", features = ["derive"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
url = { version = "2.4.1", features = ["serde"] }
